# django-drf-template

./: .env.example  .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  readme.md
core/api/: urls.py
core/api/v1/: urls.py
core/api/v1/app_example/: urls.py  views.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: __init__.py  local_example.py  main.py
docker-compose/: app.yaml  storages.yaml
